k8s/celeste-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: celeste-public
spec:
  type: LoadBalancer
  selector:
    app: celeste-agent
  ports:
  - name: http
    port: 80
    targetPort: 8080
